申込状況更新のテストコードの修正